style : fix cart wrap

--- a/src/pages/pages-css/cart.css
+++ b/src/pages/pages-css/cart.css
@@ -11,6 +11,8 @@
 
 .cart-wrapper {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 1rem;
   margin-top: 2rem;
 }
